fixed white spaces not getting added for multiple spaces/fixed cursor position after pressing space not getting updated

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,11 @@
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
 }
 
+.span{
+
+    white-space:pre;
+}
+
 .list-group {
     width: 95%;
     height: auto;
